--- a/src/base.css
+++ b/src/base.css
@@ -15,7 +15,20 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 memory-game {
   display: flex;
   flex-wrap: wrap;
+}
+
+memory-menu {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  background-color: #222;
+  z-index: 1;
 }
