--- a/src/base.css
+++ b/src/base.css
@@ -28,9 +28,8 @@ memory-game {
 memory-menu {
   width: 100vw;
   height: 100vh;
-  position: absolute;
   background-color: #222;
   z-index: 1;
-  display: flex;
-  align-items: center;
+  display: grid;
+  place-items: center;
 }
